<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/textViewPosEnc"
        android:gravity="left"
        android:layout_width="15dp"
        android:layout_height="wrap_content"
        android:text=""
        android:textStyle="bold">
    </TextView>
    <TextView
        android:id="@+id/textViewEquipoEnc"
        android:paddingLeft="3dp"
        android:gravity="left"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/equipo"
        android:textStyle="bold"
        >
    </TextView>
    <TextView
        android:id="@+id/textViewPTEnc"
        android:gravity="center"
        android:layout_width="@dimen/campo_port"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/puntos">
    </TextView>
    <TextView
        android:id="@+id/textViewPJEnc"
        android:gravity="center"
        android:layout_width="@dimen/campo_port"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/jugados">
    </TextView>
    <TextView
        android:id="@+id/textViewPGEnc"
        android:gravity="center"
        android:layout_width="@dimen/campo_port"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/ganados">
    </TextView>
    <TextView
        android:id="@+id/textViewPEEnc"
        android:gravity="center"
        android:layout_width="@dimen/campo_port"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/empatados">
    </TextView>
    <TextView
        android:id="@+id/textViewPPEnc"
        android:gravity="center"
        android:layout_width="@dimen/campo_port"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/perdidos">
    </TextView>
    <TextView
        android:id="@+id/textViewGF"
        android:gravity="center"
        android:layout_width="@dimen/campo_port"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/goles_favor">
    </TextView>
    <TextView
        android:id="@+id/textViewGC"
        android:gravity="center"
        android:layout_width="@dimen/campo_port"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/goles_contra">
        >
    </TextView>
</LinearLayout>
