<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:gravity="center"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:text="@string/año"
        android:textSize="15sp"
        android:textStyle="bold"/>
    <TextView
        android:gravity="right"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/campeon"
        android:textSize="15sp"
        android:textStyle="bold"/>
   <TextView
       android:gravity="center"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:text="@string/resultado_abr"
        android:textSize="15sp"
        android:textStyle="bold"/>
    <TextView
        android:gravity="left"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/subcampeon"
        android:textSize="15sp"
        android:textStyle="bold"/>
</LinearLayout>
