<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Clasificaciones">
     <item
         android:id="@+id/action_actualizar"
         android:orderInCategory="10"
         android:title="@string/actualizar"
         android:icon="@mipmap/ic_action_refresh"
         app:showAsAction="ifRoom">
     </item>
     <item
         android:id="@+id/action_compartir"
         android:orderInCategory="20"
         android:title="@string/compartir"
         android:icon="@mipmap/ic_action_share"
         app:showAsAction="never">
     </item>

        <item
            android:id="@+id/action_puntuar"
            android:orderInCategory="30"
            android:title="@string/puntuar"
            app:showAsAction="never"
            >
        </item>
    </menu>
