<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <TextView
        android:gravity="left"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/temporada"
        android:textSize="15sp"
        android:textStyle="bold"/>
    <TextView
        android:gravity="left"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/jugador"
        android:textSize="15sp"
        android:textStyle="bold"/>
    <!--
    <TextView
        android:gravity="left"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:text="@string/pais"
        android:textSize="15sp"
        android:textStyle="bold"/>
    <TextView
        android:gravity="left"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/equipo"
        android:textSize="15sp"
        android:textStyle="bold"/>
   -->
   <TextView
       android:paddingLeft="3dp"
       android:gravity="center"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:text="@string/goles"
        android:textSize="15sp"
        android:textStyle="bold"/>
    <!--
 <TextView
     android:gravity="left"
     android:layout_width="60dp"
     android:layout_height="wrap_content"
     android:text="@string/partidos"
     android:textSize="15sp"
     android:textStyle="bold"/>
 <TextView
     android:gravity="left"
     android:layout_width="60dp"
     android:layout_height="wrap_content"
     android:text="@string/media"
     android:textSize="15sp"
     android:textStyle="bold"/>
  -->
</LinearLayout>
